# 4-1-drone

./: .gitignore  CMakeLists.txt  README.md
_codeql_build_dir/: closeout_cli  closeout_demo  optimizer_demo
cpp/cli/: bemt_cli_closeout_dual_main.cpp  bemt_demo.cpp  bemt_mc_demo_main.cpp  cfd_cli_pipeline_audited_main.cpp  cfd_cli_pipeline_gated_main.cpp  cfd_cli_pipeline_main.cpp  closeout_bundle_demo_main.cpp  closeout_bundle_manifest_demo_main.cpp  closeout_demo.cpp  main.cpp  optimizer_demo.cpp  prob_closeout_cli_main.cpp
cpp/engine/analysis/: closeout_error.hpp  closeout_eval.cpp  closeout_eval.hpp  closeout_eval2.cpp  closeout_eval2.hpp  closeout_issue_catalog.cpp  closeout_issue_catalog.hpp  closeout_issue_helpers.hpp  closeout_json.cpp  closeout_json.hpp  closeout_json2.hpp  closeout_json3.cpp  closeout_json3.hpp  closeout_json_parse.cpp  closeout_json_parse.hpp  closeout_json_selftest.cpp  closeout_report_csv.cpp  closeout_report_csv.hpp  closeout_thresholds.hpp  closeout_types.hpp  closeset_types.hpp
cpp/engine/bemt/: bemt.hpp  bemt_batch.hpp  bemt_metrics.hpp  bemt_validation.hpp
cpp/engine/closeout/: bemt_closeout_bridge.hpp  closeout_pipeline.hpp  closeout_schema.hpp  gates.hpp  go_nogo_thresholds.hpp  mass_ledger.hpp  rules_trace.hpp  threshold_builder.hpp
cpp/engine/compliance/: rules_verification.hpp
cpp/engine/controls/: maneuverability.hpp
cpp/engine/core/: cache_key.cpp  cache_key.hpp  design.hpp  design_hash.cpp  design_hash.hpp  error.hpp  errors.hpp  hashing.cpp  hashing.hpp  logging.cpp  logging.hpp  mission_spec.hpp  settings.hpp  units.hpp
cpp/engine/exports/: stats_report_csv.cpp  stats_report_csv.hpp
cpp/engine/integration/: sfcs_corridor.hpp  sfcs_corridor_checks.hpp
cpp/engine/mission/: mission_scoring.hpp  mission_trade.hpp
cpp/engine/optimization/: candidate_generator.cpp  candidate_generator.hpp  objective.cpp  objective.hpp
cpp/engine/physics/: airfoil_eval.hpp  airfoil_polar.cpp  airfoil_polar.hpp  bemt.hpp  bemt_adapters.cpp  bemt_adapters.hpp  bemt_aggregate.hpp  bemt_all.hpp  bemt_cache.cpp  bemt_cache.hpp  bemt_closeout_csv.cpp  bemt_closeout_csv.hpp  bemt_contracts.hpp  bemt_core.cpp  bemt_core.hpp  bemt_diagnostics.hpp  bemt_disk_metrics.hpp  bemt_error.hpp  bemt_facade.cpp  bemt_facade.hpp  bemt_forward.cpp  bemt_forward.hpp  bemt_integrity.hpp  bemt_kinematics.hpp  bemt_losses.hpp  bemt_mc.cpp  bemt_mc.hpp  bemt_metrics.cpp  bemt_metrics.hpp  bemt_num_limits.hpp  bemt_polar.cpp  bemt_polar.hpp  bemt_require.hpp  bemt_safety.hpp  bemt_section_solver.hpp  bemt_selftest.hpp  bemt_sensitivity.cpp  bemt_sensitivity.hpp  bemt_solver.cpp  bemt_solver.hpp  (+56 more)
cpp/engine/propulsion/: sync_intermesh.hpp
cpp/engine/stats/: bemt_mc.hpp  empirical_cdf.hpp  online_stats.hpp  risk_analyzer.hpp
cpp/engine/structures/: gearbox_feasibility.hpp
cpp/tools/: closeout_cli.cpp
docs/v2/: README.md
python/tools/: __init__.py  run_closeout.py
scripts/: run_closeout.py
v2/engine/: CMakeLists.txt
v2/studio/: CMakeLists.txt
